@@ -252,7 +252,7 @@ class MasterUI {selected : {private MiscFuncs}
 //        synth->getRuntime().saveConfig();
         synth->guiClosed(true);
     }}
-      xywh {11 99 385 465} type Double labelfont 13 labelsize 12 hide xclass Yoshimi
+      xywh {7 120 385 465} type Double labelfont 13 labelsize 12 hide xclass Yoshimi
     } {
       Fl_Menu_Bar mastermenu {
         xywh {-7 0 400 25} labelsize 13
@@ -1290,8 +1290,6 @@ collect_data(synth, value, (Fl::event_button() | (isInteger << 7)), control, kit
                  synth->addHistory(fname, 2);
             RecentParams->activate();
             microtonalui->apply();
-            if(result > 1)
-            	fl_alert("At least one instrument is called 'Simple Sound', the name of Yoshimi's basic sound. You should change this if you wish to re-save.");
         }
         else
         {
