@@ -1,5 +1,10 @@
 yoshimi 1.4.x
 
+2016-8-16 Will
+* Loading untitled instruments now uses the filename.
+* Loading "Simple Sound" changes the name to "No Title".
+* User prevented from changing name *to* "Simple Sound".
+
 2016-8-15 Will
 * Removed redundant (duplicated) part number settings.
 * Improved vector control consistency.
